kubernetes/components/anubis/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "${APP}-anubis"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: "${APP}-anubis"
      app.kubernetes.io/name: "${APP}-anubis"
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
            gateway.networking.k8s.io/gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
      app.kubernetes.io/instance: "${APP}"
      app.kubernetes.io/name: "${APP}"
